syntax = "proto3";
option java_multiple_files = true;
package de.tub.ise;

// Protobuf Specification for key-value store
// You can change or adapt this if u want 
service KeyValueStore {
    rpc put (KeyValuePair) returns (Response) {}
    rpc delete (Key) returns (Response) {}
    rpc get (Key) returns (Response) {}
    rpc replicate (KeyValuePair) returns (Response) {}
    rpc getReplica (Key) returns (Response) {}
    rpc deleteReplica (Key) returns (Response) {}
  }

message KeyValuePair {
    string key = 1;
    string value = 2;
 } 
  
message Key{
    string key = 1;
}

// All fields in proto3 are optional
message Response{
    bool success = 1;
    string key = 2;
    string value = 3; 
}

